# nonos_FDN

./: .gitattributes  .gitignore  LICENSE  LICENSE.docs  README.md  build_nonosctl.sh
boot/: grub.cfg
boot/themes/: theme.txt
initramfs/: init
modules/nonos-ui/: Cargo.toml
modules/nonos-ui/src/: banner.rs  footer.rs  layout.rs  main.rs  metrics.rs  state.rs  theme.rs  ui.rs
modules/nonos-ui/src/widgets/: banner.rs  footer.rs  metrics.rs  mod.rs
modules/nonosctl/: Cargo.toml  script_fix
modules/nonosctl/src/: main.rs  script_fix
modules/nonosctl/src/cli/: command.rs  deploy.rs  fs.rs  init.rs  keygen.rs  mod.rs  net.rs  relay.rs  status.rs  sys.rs  zk.rs
modules/nonosctl/src/modules/: deploy.rs  fs.rs  mod.rs  net.rs  relay.rs  sys.rs  user.rs  zk.rs
modules/nonosctl/src/plugins/: manager.rs
patches/: hardening.patch
scripts/: build_initramfs.sh  build_kernel.sh  make_iso.sh
