[package]
name = "nonosctl"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
